# ai-agent-rs

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  clippy.toml  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml
config/: agent.yaml  prompts.yaml
src/: main.rs  worker.rs
src/api/: mod.rs  queue.rs  state.rs
src/api/middleware/: auth.rs  logging.rs  mod.rs
src/api/routes/: chat.rs  documents.rs  health.rs  mod.rs
src/application/: mod.rs
src/application/services/: document.rs  mod.rs  rag.rs
src/domain/: errors.rs  mod.rs
src/domain/entities/: conversation.rs  document.rs  embedding.rs  mod.rs
src/domain/ports/: document_store.rs  embedding.rs  llm.rs  mod.rs  vector_store.rs
src/infrastructure/: agent.rs  config.rs  mod.rs
src/infrastructure/embedding/: mod.rs  text.rs
src/infrastructure/llm/: anthropic.rs  mod.rs
src/infrastructure/queue/: jobs.rs  mod.rs
src/infrastructure/tools/: knowledge_base.rs  mod.rs
src/infrastructure/vector_store/: in_memory.rs  mod.rs  qdrant.rs
