[package]
name = "ai-agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Agentic Team"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
futures = "0.3.31"
async-trait = "0.1.89"

# Web framework
axum = { version = "0.8.8", features = ["macros", "multipart"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace", "compression-gzip"] }
hyper = "1.8"

# LLM & AI
rig-core = "0.29"

# Vector Database
qdrant-client = "1.16"

# Redis
redis = { version = "1.0", features = ["tokio-comp", "connection-manager", "aio"] }
deadpool-redis = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utils
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
